Horizontal scroll fixed

--- a/src/Containers/Header/Header.css
+++ b/src/Containers/Header/Header.css
@@ -2,7 +2,16 @@
     font-family: Kanit, sans-serif;
     color: rgb(118, 69, 217);
     font-weight: 700;
-    font-size:3.5rem;
+    font-size:4.5rem;
+}
+@media screen AND (min-width: 320px)
+{
+    .header-h1{
+        font-family: Kanit, sans-serif;
+        color: rgb(118, 69, 217);
+        font-weight: 700;
+        font-size:2.5rem;
+    }
 }
 .header-img{
     width: 100%;
