--- a/src/Containers/Navbar/Navbar.css
+++ b/src/Containers/Navbar/Navbar.css
@@ -15,3 +15,11 @@
     border-radius: 30px;
     color:white;
 }
+.nav-list{
+}
+@media screen and (min-width : 320px)
+{    
+    .nav-list{
+        justify-content: center;
+    }
+}
